-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-02-15	pwessel
	* grdproject.c:		Changed header inc but not r_inc.

2012-02-14	remko
	* GNUmakefile, configure.ac:	Split off triangle code again into gmt-${version}-non-gpl.tar.bz2

2012-02-13	pwessel
	* gmt_proj.c:		Determine if N or S polar for conic projections by looking at the
				selected region, not the central point [D. Scheirer report 2/9/2012].

2012-02-10	fwobbe
	* gmt_prototypes.h, gmt_io.c, gmt_support.c, gmtapi_util.c, ps2raster.c:
				Function enhancements to better deal with CR and LF:
				GMT_fgets GMT_chop GMT_chop_ext GMT_trim_segheader.
				New Functions: GMT_fgets_chop GMT_strstrip GMT_cr2lf
				GMT_strlshift.
				Deleted: gmt_trim_line because it is obsolete.
				Simpliefied	DOS_path_fix.

2012-02-09	jluis
	* pslib.c, gmt_init.c:	On Windows DOS|psl_path_fix() test if the path has a leading
				'/cygdrive' that may have been set for example by Cygwin on
				declaring GMT_SHAREDIR. If yes chop it off. This makes easier
				to use Windows binaries on Cygwin.

2012-02-08	jluis
	* ps2raster.c:		Improve tests to detect if the PS file is not closed (excess -K)
				Now also warns when creating a PDF file from a unclosed PS

2012-02-07	pwessel
	* psxy[z]:		For the two mixed symbol/line options -Sf and -Sq, we now
				examine the segment header for any changes to these options.

2012-02-07	jluis
	* ps2raster.c:		On Windows the ghostscript executable path is now fetch from
				the registry. In case it fails, fall back to the old "get
				it from the path" mechanism.

2012-02-02	pwessel
	* pslegend.c:		Did not process -U, and had usage message about obsolete -S
	* gmt_proj.c:		For -JE, both projection center and antipode gave x = y = 0.
				Now, antipode results in NaN, NaN and a flag is set.

2012-01-31	pwessel